src/app/globals.css
@import "tailwindcss";
@plugin "@tailwindcss/forms";
@source "../";

@theme {
  --color-primary: var(--primary);
  --color-secondary: var(--secondary);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
}

:root {
  --primary: #23553D;
  --secondary: #f4f4f4;
  --background: #ffffff;
  --foreground: #1a1a1a;
  --font-montserrat: "Montserrat", sans-serif;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: var(--font-montserrat);
}

* {
  box-sizing: border-box;
}

